--- a/fundamentos/secao-3.1-introducaoHTMLeCSS/dia-1-HTMLeCSS/indexPrimeirasTags.html
+++ b/fundamentos/secao-3.1-introducaoHTMLeCSS/dia-1-HTMLeCSS/indexPrimeirasTags.html
@@ -12,6 +12,6 @@
         <li>Mais ngm</li>
     </ol>
     <img src="https://cdn.pensador.com/img/imagens/pe/ns/pensador_frases_tristes_para_status_01.jpg">
-    <img src="Screenshotfrom2022-11-04 15-54-01.png" alt="não encontrada">
+    <img src="Screenshotfrom2022-11-04 15-54-01.png" alt="não encontrada"> <br>
   </body>
 </html>
