colocando o WIDTH nas IMG no file PrimeirasTagsIndex.html

--- a/fundamentos/secao-3.1-introducaoHTMLeCSS/dia-1-HTMLeCSS/PrimeirasTagsIndex.html
+++ b/fundamentos/secao-3.1-introducaoHTMLeCSS/dia-1-HTMLeCSS/PrimeirasTagsIndex.html
@@ -11,7 +11,8 @@
         <li>Cante</li>
         <li>Mais ngm</li>
     </ol>
-    <img src="https://cdn.pensador.com/img/imagens/pe/ns/pensador_frases_tristes_para_status_01.jpg">
-    <img src="Screenshotfrom2022-11-04 15-54-01.png" alt="não encontrada"> <br>
+    <img src="https://cdn.pensador.com/img/imagens/pe/ns/pensador_frases_tristes_para_status_01.jpg"
+      width="400px">
+    <img src="Screenshotfrom2022-11-04 15-54-01.png" alt="não encontrada" width="600px"> <br>
   </body>
 </html>
