adicionando os parágrafos

--- a/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/LinksExternos&InternosIndex.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/LinksExternos&InternosIndex.html
@@ -13,5 +13,11 @@
         <li>Wilson</li>
         <li>Juliana</li>
       </ul>
+
+      <p>Não tenho criatividade e não tenho o que escrever 1</p>
+      <p>Não tenho criatividade e não tenho o que escrever 2</p>
+      <p>Não tenho criatividade e não tenho o que escrever 3</p>
+      <p>Não tenho criatividade e não tenho o que escrever 4</p>
+      <p>Não tenho criatividade e não tenho o que escrever 5</p>
   </body>
 </html>
