--- a/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/LinksExternos&InternosIndex.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/LinksExternos&InternosIndex.html
@@ -7,17 +7,18 @@
   <body>
     <h1>Exercícios</h1>
       <ul>
-        <li>Adilson</li>
-        <li>Vinicius</li>
-        <li>Erickson</li>
-        <li>Wilson</li>
-        <li>Juliana</li>
+        <li><a href="#Adilson">Adilson</a></li>
+        <li><a href="#Vinicius">Vinicius</a></li>
+        <li><a href="#Erickson">Erickson</a></li>
+        <li><a href="#Wilson">Wilson</a></li>
+        <li><a href="#Juliana">Juliana</a></li>
       </ul>
-
-      <p>Não tenho criatividade e não tenho o que escrever 1</p>
-      <p>Não tenho criatividade e não tenho o que escrever 2</p>
-      <p>Não tenho criatividade e não tenho o que escrever 3</p>
-      <p>Não tenho criatividade e não tenho o que escrever 4</p>
-      <p>Não tenho criatividade e não tenho o que escrever 5</p>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <p id="Adilson">Não tenho criatividade e não tenho o que escrever 1</p>
+      <p id="Vinicius" >Não tenho criatividade e não tenho o que escrever 2</p>
+      <p id="Erickson">Não tenho criatividade e não tenho o que escrever 3</p>
+      <p id="Wilson">Não tenho criatividade e não tenho o que escrever 4</p>
+      <p id="Juliana">Não tenho criatividade e não tenho o que escrever 5</p>
   </body>
 </html>
