Adicionando um link para o Google. Link sendo aberto em outra página

--- a/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/LinksExternos&InternosIndex.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/LinksExternos&InternosIndex.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <h1>Exercícios</h1>
+
+    <h3>Quer acessar o Google? <a href="https://www.google.com.br/" target="_blank">Clique aqui</a></h3>
       <ul>
         <li><a href="#Adilson">Adilson</a></li>
         <li><a href="#Vinicius">Vinicius</a></li>
@@ -21,4 +23,4 @@
       <p id="Wilson">Não tenho criatividade e não tenho o que escrever 4</p>
       <p id="Juliana">Não tenho criatividade e não tenho o que escrever 5</p>
   </body>
-</html>
+</html>ss
