Exercicios da primeira parte da aula. 'Introdução ao CSS'

--- a/fundamentos/secao-3-introducao-html-e-css/dia-2-primeiros-passos-em-css/arquivo.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-2-primeiros-passos-em-css/arquivo.html
@@ -1,1 +1,30 @@
-Ainda vou editar
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8">
+    <title>HTML</title>
+    <style>
+        h1 {
+            width: 100px;
+            color: orange;
+        }
+
+        ul {
+            background-color: aqua;
+        }
+
+        .p-ul {
+            background-color: blue;
+        }
+    </style>
+  </head>
+  <body>
+    <h1>Frutas</h1>
+    <p class="p-ul">Qual é a sua fruta favorita?</p>
+    <ul class="p-ul">
+      <li>Maçã</li>
+      <li>Banana</li>
+      <li>Goiaba</li>
+    </ul>
+  </body>
+</html>
