--- a/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses.html
@@ -7,7 +7,18 @@
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
-    <p>Top 3 dos melhores sites que existem na web</p>
+    <p>Top 3 dos melhores sites que existem na web
+        <ol>
+            <li>Site da Trybe</li>
+            <li>Site do Google</li>
+            <li>Site do YouTube</li>
+        </ol>
+    </p>
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+        <li>Porque é por onde eu estudo e tiro todas as minhas dúvidas sobre programação</li>
+        <li>São sites intuitivos e fáceis de serem usados</li>
+        <li>São bonitos</li>
+    </ul>
   </body>
 </html>
