--- a/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/aula-ao-vivo.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/aula-ao-vivo.html
@@ -8,6 +8,31 @@
 </head>
 <body>
     <h1>Vamos programar juntos!</h1>
-    <img src="./Screenshotfrom2022-11-04 15-54-01.png" alt="Print da parte inicial da trybe">
+    <img src="./images/Screenshotfrom2022-11-04 15-54-01.png" alt="Print da parte inicial da trybe" width="800px">
+    <p>Trabalho para qualquer local do mundo com qualquer um que me pague mais</p>
+    <hr>
+
+    <h3>Quem sou eu?</h3>
+    <p>Meu nome é Pedro Alexandre, WEB DEVELOPER formado pela Trybe
+    <br><br>
+    Apaixonado por meu filho, familia (pais e irmã), namorada, Home Office, esportes e mercado financeiro
+    </p>
+
+    <img src="./images/Screenshot from 2022-11-21 16-38-56.png" alt="Foto de um doido" width="300px">
+    <p>O quanto tem de estranho tem de inteligente. Já trabalhou no submundo, por isso esse jeito.</p>
+    <h4>Cante Aluno Trybe turma 29</h4>
+
+    <img src="" alt="Foto de Shura" width="300px">
+    <p>Meu mentor</p>
+    <h4>Luiz Carlos (Shura)</h4>
+
+    <img src="" alt="Foto de Cortez" width="300px">
+    <p>Ainda será meu mentor (Nem sabe que estudo programação ainda)</p>
+    <h4>Cante Aluno Trybe turma 29</h4>
+
+    <hr>
+    <h3>Pessoas que já trabalhei junto</h3>
+    <hr>
+    <h3>Quanto quero ganhar?</h3>
 </body>
 </html>
