Fazendo algumas mudanças. Colocando a foto dos meninos to segundo tópico -pessoas que já trabalhei junto- e no primeiro tópico deixando fotos da minha familia

--- a/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/aula-ao-vivo.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/aula-ao-vivo.html
@@ -18,6 +18,21 @@
     Apaixonado por meu filho, familia (pais e irmã), namorada, Home Office, esportes e mercado financeiro
     </p>
 
+    <img src="." alt="Foto de Xande" width="300px">
+    <p>Meu boe dos boes</p>
+    <h4>Alexandre</h4>
+
+    <img src="" alt="Foto de Thais" width="300px">
+    <p>Minha irmã linda e maravilhosa</p>
+    <h4>Thais Brazão</h4>
+
+    <img src="" alt="Foto de Lili" width="300px">
+    <p>Minha namorada linda e maravilhosa</p>
+    <h4>Lianny Karoline</h4>
+
+    <hr>
+    <h3>Pessoas que já trabalhei junto</h3>
+
     <img src="./images/Screenshot from 2022-11-21 16-38-56.png" alt="Foto de um doido" width="300px">
     <p>O quanto tem de estranho tem de inteligente. Já trabalhou no submundo, por isso esse jeito.</p>
     <h4>Cante Aluno Trybe turma 29</h4>
@@ -30,8 +45,6 @@
     <p>Ainda será meu mentor (Nem sabe que estudo programação ainda)</p>
     <h4>Cante Aluno Trybe turma 29</h4>
 
-    <hr>
-    <h3>Pessoas que já trabalhei junto</h3>
     <hr>
     <h3>Quanto quero ganhar?</h3>
 </body>
