Atualizando coisas do que foi feito antes

--- a/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/aula-ao-vivo.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-1-HTMLeCSS/aula-ao-vivo.html
@@ -30,8 +30,9 @@
     <p>Minha namorada linda e maravilhosa</p>
     <h4>Lianny Karoline</h4>
 
+    
     <hr>
-    <h3>Pessoas que já trabalhei junto</h3>
+    <h3>Pessoas que trabalhei junto</h3>
 
     <img src="./images/Screenshot from 2022-11-21 16-38-56.png" alt="Foto de um doido" width="300px">
     <p>O quanto tem de estranho tem de inteligente. Já trabalhou no submundo, por isso esse jeito.</p>
@@ -43,7 +44,7 @@
 
     <img src="" alt="Foto de Cortez" width="300px">
     <p>Ainda será meu mentor (Nem sabe que estudo programação ainda)</p>
-    <h4>Cante Aluno Trybe turma 29</h4>
+    <h4>Victor Cortez</h4>
 
     <hr>
     <h3>Quanto quero ganhar?</h3>
