Adc font-family

--- a/fundamentos/secao-3-introducao-html-e-css/dia-2-primeiros-passos-em-css/aula-ao-vivo-2.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-2-primeiros-passos-em-css/aula-ao-vivo-2.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap" rel="stylesheet">
     <title>Pedro Alexandre</title>
+    <style>
+        body {
+            font-family: monospace, 'Montserrat', sans-serif;
+        }
+    </style>
 </head>
 <body>
     <h1>Vamos programar juntos!</h1>
@@ -34,7 +41,7 @@
     <hr>
     <h3>Pessoas que trabalhei junto</h3>
 
-    <img src="./images/Screenshot from 2022-11-21 16-38-56.png" alt="Foto de um doido" width="300px">
+    <img src="./images/Screenshot from 2022-11-21 16-38-56.png" alt="Foto de um doido" width="400px">
     <p>O quanto tem de estranho tem de inteligente. Já trabalhou no submundo, por isso esse jeito.</p>
     <h4>Cante Aluno Trybe turma 29</h4>
 
