Colocando o style dentro do arquivo css

--- a/fundamentos/secao-3-introducao-html-e-css/dia-2-primeiros-passos-em-css/aula-ao-vivo-2.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-2-primeiros-passos-em-css/aula-ao-vivo-2.html
@@ -6,12 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="aula-ao-vivo-2.css">
     <title>Pedro Alexandre</title>
-    <style>
-        body {
-            font-family: monospace, 'Montserrat', sans-serif;
-        }
-    </style>
 </head>
 <body>
     <h1>Vamos programar juntos!</h1>
@@ -27,15 +24,15 @@
 
     <img src="." alt="Foto de Xande" width="300px">
     <p>Meu boe dos boes</p>
-    <h4>Alexandre</h4>
+    <h4 class="h-green">Alexandre</h4>
 
     <img src="" alt="Foto de Thais" width="300px">
     <p>Minha irmã linda e maravilhosa</p>
-    <h4>Thais Brazão</h4>
+    <h4 class="h-green">Thais Brazão</h4>
 
     <img src="" alt="Foto de Lili" width="300px">
     <p>Minha namorada linda e maravilhosa</p>
-    <h4>Lianny Karoline</h4>
+    <h4 class="h-green">Lianny Karoline</h4>
 
     
     <hr>
@@ -43,15 +40,15 @@
 
     <img src="./images/Screenshot from 2022-11-21 16-38-56.png" alt="Foto de um doido" width="400px">
     <p>O quanto tem de estranho tem de inteligente. Já trabalhou no submundo, por isso esse jeito.</p>
-    <h4>Cante Aluno Trybe turma 29</h4>
+    <h4 class="h-green">Cante Aluno Trybe turma 29</h4>
 
     <img src="" alt="Foto de Shura" width="300px">
     <p>Meu mentor</p>
-    <h4>Luiz Carlos (Shura)</h4>
+    <h4 class="h-green">Luiz Carlos (Shura)</h4>
 
     <img src="" alt="Foto de Cortez" width="300px">
     <p>Ainda será meu mentor (Nem sabe que estudo programação ainda)</p>
-    <h4>Victor Cortez</h4>
+    <h4 class="h-green">Victor Cortez</h4>
 
     <hr>
     <h3>Quais minhas meta até final de 2023?</h3>
