Estiliza hero e section title

--- a/fundamentos/secao-3-introducao-html-e-css/dia-2-primeiros-passos-em-css/aula-ao-vivo-2.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-2-primeiros-passos-em-css/aula-ao-vivo-2.html
@@ -11,12 +11,12 @@
     <title>Pedro Alexandre</title>
 </head>
 <body>
-    <h1>Vamos programar juntos!</h1>
+    <h1 class="hero-title">Vamos programar juntos!</h1>
     <img src="./images/Screenshotfrom2022-11-04 15-54-01.png" alt="Print da parte inicial da trybe" width="500px">
     <p>Trabalho para qualquer local do mundo com qualquer um que me pague mais</p>
     <hr>
 
-    <h3>Quem sou eu?</h3>
+    <h3 class="section-title">Quem sou eu?</h3>
     <p>Meu nome é Pedro Alexandre, WEB DEVELOPER formado pela Trybe
     <br><br>
     Apaixonado por meu filho, familia (pais e irmã), namorada, Home Office, esportes e mercado financeiro
@@ -36,7 +36,7 @@
 
     
     <hr>
-    <h3>Pessoas que trabalhei junto</h3>
+    <h3 class="section-title">Pessoas que trabalhei junto</h3>
 
     <img src="./images/Screenshot from 2022-11-21 16-38-56.png" alt="Foto de um doido" width="400px">
     <p>O quanto tem de estranho tem de inteligente. Já trabalhou no submundo, por isso esse jeito.</p>
@@ -51,7 +51,7 @@
     <h4 class="h-green">Victor Cortez</h4>
 
     <hr>
-    <h3>Quais minhas meta até final de 2023?</h3>
+    <h3 class="section-title">Quais minhas meta até final de 2023?</h3>
     <ul>
         <li>Estar <strong>empregado</strong> até o <strong>final de 2023</strong></li>
         <li>Ter um <strong>ar condicionado dual inverter</strong> no meu quarto</li>
