--- a/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/aula-ao-vivo-3.html
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/aula-ao-vivo-3.html
@@ -12,9 +12,11 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="hero-title">Vamos programar juntos!</h1>
-        
-        <p>Trabalho para qualquer local do mundo com qualquer um que me pague mais</p>
+        <div class="header-content">
+            <h1 class="hero-title">Vamos programar juntos!</h1>
+            
+            <p class="header-text">Trabalho para qualquer local do mundo com qualquer um que me pague mais</p>
+        </div>
     </div>
 
 
@@ -24,7 +26,7 @@
     Apaixonado por meu filho, familia (pais e irmã), namorada, Home Office, esportes e mercado financeiro
     </p>
 
-    <img src="" alt="Foto de Xande" class="picture">
+    <img src="./" alt="Foto de Xande" class="picture">
     <p>Meu boe dos boes</p>
     <h4 class="h-green">Alexandre</h4>
 
